name: jsaddle-warp
version: 0.9.8.2
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: Interface for JavaScript that works with GHCJS and GHC
description:
    This package provides an EDSL for calling JavaScript that
    can be used both from GHCJS and GHC.  When using GHC
    the application is run using Warp and WebSockets to
    drive a small JavaScript helper.
category: Web, Javascript
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle
    subdir: jsaddle-warp

library

    if !impl(ghcjs -any)
        exposed-modules:
            Language.Javascript.JSaddle.WebSockets
        other-modules:
            Language.Javascript.JSaddle.WebSockets.Compat
        build-depends:
            aeson,
            bytestring,
            containers,
            foreign-store,
            http-types,
            jsaddle,
            stm,
            text,
            time,
            transformers,
            wai,
            wai-websockets,
            warp,
            websockets
    exposed-modules:
        Language.Javascript.JSaddle.Warp
    build-depends:
        base
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans -Wall

-- test-suite test-tool
--     if impl(ghcjs -any) || os(ios)
--         buildable: False

--     build-depends:
--             QuickCheck -any,
--             aeson -any,
--             bytestring -any,
--             containers -any,
--             deepseq -any,
--             doctest,
--             exceptions -any,
--             filepath,
--             foreign-store -any,
--             ghc-prim -any,
--             http-types -any,
--             jsaddle -any,
--             jsaddle-warp -any,
--             lens -any,
--             network -any,
--             ref-tf -any,
--             primitive -any,
--             process,
--             random -any,
--             stm -any,
--             text -any,
--             time -any,
--             transformers -any,
--             unliftio-core -any,
--             wai -any,
--             wai-websockets -any,
--             warp -any,
--             webdriver,
--             websockets -any
--     type: exitcode-stdio-1.0
--     main-is: DocTest.hs
--     build-depends:
--         base -any
--     default-language: Haskell2010
--     hs-source-dirs: tests
--     ghc-options: -ferror-spans -threaded
