name: jsaddle-webkit2gtk
version: 0.9.8.2
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: Interface for JavaScript that works with GHCJS and GHC
description:
    This package provides an EDSL for calling JavaScript that
    can be used both from GHCJS and GHC.  When using GHC
    the application is run using Warp and WebSockets to
    drive a small JavaScipt helper.
category: Web, Javascript
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle
    subdir: jsaddle-webkit2gtk

library
    exposed-modules:
        Language.Javascript.JSaddle.WebKitGTK
    build-depends:
        base
    if !impl(ghcjs -any)
      build-depends:
        aeson,
        base,
        bytestring,
        directory,
        gi-glib,
        gi-gio,
        gi-gtk,
        gi-webkit2,
        gi-javascriptcore,
        haskell-gi-base,
        haskell-gi-overloading,
        jsaddle,
        text,
        webkit2gtk3-javascriptcore
    if !os(windows)
      build-depends:
        unix
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans -Wall

