name: jsaddle
version: 0.9.8.2
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: Interface for JavaScript that works with GHCJS and GHC
description:
    This package provides an EDSL for calling JavaScript that
    can be used both from GHCJS and GHC.  When using GHC
    the application is run using Warp and WebSockets to
    drive a small JavaScript helper.
category: Web, Javascript
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle
    subdir: jsaddle

flag call-stacks
  description: Include HasCallStack constraint on calls unchecked calls
  default: False

flag check-unchecked
  description: Fail unchecked calls when they are called (rather than when the result is evaluated)
  default: False

library

    if impl(ghcjs -any)
        build-depends:
            ghcjs-base -any,
            ghcjs-prim -any
    else
        build-depends:
            attoparsec,
            containers,
            deepseq,
            filepath,
            ghc-prim,
            http-types,
            process,
            random,
            ref-tf,
            scientific,
            stm,
            time,
            unordered-containers,
            vector,
            unliftio-core
        exposed-modules:
            Data.JSString
            Data.JSString.Internal
            Data.JSString.Internal.Fusion
            Data.JSString.Internal.Fusion.CaseMapping
            Data.JSString.Internal.Fusion.Common
            Data.JSString.Internal.Fusion.Types
            Data.JSString.Internal.Search
            Data.JSString.Internal.Type
            Data.JSString.Text
            GHCJS.Prim
            GHCJS.Prim.Internal
            GHCJS.Types
            GHCJS.Concurrent
            GHCJS.Foreign
            GHCJS.Foreign.Internal
            GHCJS.Internal.Types
            GHCJS.Marshal
            GHCJS.Marshal.Internal
            GHCJS.Marshal.Pure
            GHCJS.Buffer
            GHCJS.Buffer.Types
            JavaScript.TypedArray
            JavaScript.TypedArray.ArrayBuffer
            JavaScript.TypedArray.ArrayBuffer.Internal
            JavaScript.TypedArray.ArrayBuffer.Type
            JavaScript.TypedArray.DataView.Internal
            JavaScript.TypedArray.Immutable
            JavaScript.TypedArray.Internal
            JavaScript.TypedArray.Internal.Types
            JavaScript.Array
            JavaScript.Array.Internal
            JavaScript.Object
            JavaScript.Object.Internal
            Language.Javascript.JSaddle.Debug
            Language.Javascript.JSaddle.Native
            Language.Javascript.JSaddle.Native.Internal
            Language.Javascript.JSaddle.Null
        hs-source-dirs: src-ghc
    exposed-modules:
        Language.Javascript.JSaddle
        Language.Javascript.JSaddle.Arguments
        Language.Javascript.JSaddle.Classes
        Language.Javascript.JSaddle.Classes.Internal
        Language.Javascript.JSaddle.Evaluate
        Language.Javascript.JSaddle.Exception
        Language.Javascript.JSaddle.Helper
        Language.Javascript.JSaddle.Marshal.String
        Language.Javascript.JSaddle.Monad
        Language.Javascript.JSaddle.Object
        Language.Javascript.JSaddle.Properties
        Language.Javascript.JSaddle.Run
        Language.Javascript.JSaddle.Run.Files
        Language.Javascript.JSaddle.String
        Language.Javascript.JSaddle.Value
        Language.Javascript.JSaddle.Types
    build-depends:
        aeson,
        base,
        base-compat,
        base64-bytestring,
        bytestring,
        exceptions,
        lens,
        primitive,
        text,
        transformers
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans -Wall
    if flag(check-unchecked)
        cpp-options: -DCHECK_UNCHECKED
    if flag(call-stacks) || flag(check-unchecked)
        cpp-options: -DJSADDLE_HAS_CALL_STACK
